After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 760531 - stale repo/tmp/tmpobjects-$(cat /proc/sys/kernel/random/boot_id) directories
stale repo/tmp/tmpobjects-$(cat /proc/sys/kernel/random/boot_id) directories
Status: RESOLVED FIXED
Product: ostree
Classification: Infrastructure
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: OSTree maintainer(s)
OSTree maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-01-12 15:14 UTC by Gatis Paeglis
Modified: 2016-07-19 18:01 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Gatis Paeglis 2016-01-12 15:14:41 UTC
Steps to reproduce:

1) ostree admin upgrade
2) kill the process
3) reboot
4) ostree admin upgrade
5) wait for upgrade to finish, reboot

Expected:

no tmpobjects-* directories in repo/tmp/

Actual:

tmpobjects- is present. It was not cleared out because process was killed in step 2 and system rebooted before running another "ostree admin upgrade"
Comment 1 Gatis Paeglis 2016-01-12 15:16:23 UTC
ostree admin cleanup also does not remove the file.
Comment 2 Colin Walters 2016-01-12 15:22:47 UTC
Yeah, right now they're pruned after 1 day, but we can clearly do better here - recognize tmpobjects from other boot ids and prune them in admin cleanup would make sense to me.
Comment 3 Colin Walters 2016-01-13 23:08:27 UTC
https://github.com/GNOME/ostree/pull/170
Comment 4 Gatis Paeglis 2016-07-19 18:01:56 UTC
Closing, as this has been fixed and merged.